--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,8 @@ scikit-learn==1.4.2
 numpy>=1.26
 pandas>=2.0
 joblib>=1.3
+
+streamlit>=1.32,<1.50
+numpy==1.26.4
+scikit-learn==1.3.2
+joblib==1.3.2
